MSS-1613-bugfix-consistent-alignment-homepage

--- a/mcsus/cartridges/app_custom_storefront_mcsus/cartridge/client/default/scss/homepage/_homepage.scss
+++ b/mcsus/cartridges/app_custom_storefront_mcsus/cartridge/client/default/scss/homepage/_homepage.scss
@@ -197,9 +197,12 @@
           &-tile {
 
             .tile-body {
+              .swatches-wrapper-box {
+                height: rem(28);
+              }
               .promotions {
                 overflow: hidden;
-                height: rem(60);
+                height: rem(44);
 
                   @include media-breakpoint-down(sm) {
                     height: rem(60);
@@ -214,6 +217,7 @@
               margin-bottom: rem(13);
               font-family: $font-medium;
               font-weight: 500;
+              height: auto;
 
               @include media-breakpoint-up(xs) {
                 font-size: rem(14);
